tdf#97717: do not call add_postProcess from g element

Otherwise, it will be called twice, from g and from its children

Change-Id: I88535a7caab6a7711f917b3f383cd79b3b9fbd2d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153276
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>