svgio/qa/cppunit/SvgImportTest.cxx
@@ -312,6 +312,25 @@ CPPUNIT_TEST_FIXTURE(Test, testFontsizeRelative)
     assertXPath(pDocument, "/primitive2D/transform/textsimpleportion[2]", "familyname", "serif");
 }
 
+CPPUNIT_TEST_FIXTURE(Test, testTdf97717)
+{
+    //Check when font-size uses relative units (em,ex) and it's based on its parent's font-size
+    Primitive2DSequence aSequence = parseSvg(u"/svgio/qa/cppunit/data/tdf97717.svg");
+    CPPUNIT_ASSERT_EQUAL(1, static_cast<int>(aSequence.getLength()));
+
+    drawinglayer::Primitive2dXmlDump dumper;
+    xmlDocUniquePtr pDocument = dumper.dumpAndParse(aSequence);
+
+    CPPUNIT_ASSERT (pDocument);
+
+    assertXPath(pDocument, "/primitive2D/transform/unifiedtransparence[1]", "transparence", "50");
+    // Without the fix in place, this test would have failed here since the patch
+    // would have contained two unifiedtransparence
+    assertXPath(pDocument, "/primitive2D/transform/unifiedtransparence[1]/polypolygoncolor", "color", "#ccccff");
+    assertXPath(pDocument, "/primitive2D/transform/unifiedtransparence[2]", "transparence", "50");
+    assertXPath(pDocument, "/primitive2D/transform/unifiedtransparence[2]/polypolygoncolor", "color", "#ccccff");
+}
+
 CPPUNIT_TEST_FIXTURE(Test, testMarkerOrient)
 {
     Primitive2DSequence aSequence = parseSvg(u"/svgio/qa/cppunit/data/MarkerOrient.svg");
